# cmake-protbuf-example

./: .gitignore  CMakeLists.txt  README.md
proto/: message.proto
src/: CMakeLists.txt  main.cpp
